Issue #13781: Fix GzipFile to work with os.fdopen()'d file objects.